knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Node_Coordinate__c/fields/pqcrush__Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>pqcrush__Account_Plan__c</referenceTo>
    <relationshipLabel>RM Node Coordinates</relationshipLabel>
    <relationshipName>RM_Node_Coordinates</relationshipName>
    <type>Lookup</type>
</CustomField>