knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Node_Coordinate__c/fields/pqcrush__TempId__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__TempId__c</fullName>
    <label>TempId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>