knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__RM_Node_Coordinate__c/fields/pqcrush__X__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__X__c</fullName>
    <description>X Coordinate</description>
    <inlineHelpText>X Coordinate</inlineHelpText>
    <label>X</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>